# python-fastapi-IA-rag-generator

./: .env-example  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  clean_pycache.sh  config.py  docker-compose.yml  logger.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: config.py  dependencies.py  exceptions.py  main.py  middleware.py
app/models/: schemas.py
app/routers/: direct.py  documents.py  eval.py  health.py  rag.py
app/services/: base.py  factory.py  huggingface.py  ollama.py  openai.py
app/store/: cache.py  elasticsearch.py  ingest.py
controllers/: direct_search_controller.py  rag_controller.py
interfaces/: llm_service.py
models/: request_models.py
scripts/: dev-tools.sh  ingest.py  ingest_documents.py  wait-for-it.sh
services/: huggingface_service.py  llm_factory.py  ollama_service.py  openai_service.py
tests/: conftest.py  test_config.py  test_direct.py  test_documents.py  test_eval.py  test_factory.py  test_health.py  test_integration.py  test_observability.py  test_rag.py  test_services.py  test_streaming.py
